I change project from one project to multi-module pom project